ebs resolved merge conflicts